welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: '(' expected but identifier found.
		if getY() == 0 {
                   ^ZigZag:14: error: illegal start of simple expression
		c=c+1}}
                      ^